--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -126,8 +126,8 @@
       新規投稿商品
     </div>
     <ul class='item-lists'>
-      <% if @item.present? %>
-        <% @item.each do |item| %>
+      <% if @items.present? %>
+        <% @items.each do |item| %>
           <li class='list'>
             <%= link_to "#" do %>
             <div class='item-img-content'>
