複数フォームへの実装(バリデーション確認等未実施)
・order/sendingテーブル両方に登録がされること確認済み
・payjpまでデータを渡せること確認済み
・render処理でエラーが出ているのとバリデーション周りは未確認

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -30,9 +30,7 @@
       </p>
     </div>
     <%# /支払額の表示 %>
-    <%= form_with url: item_orders_path, id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
-    <%# 複数モデルへの更新検証のため、一時的に上記記載へ変更%>
-    <%#= form_with model: @order, id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
+    <%= form_with model: @order_sending, url: item_orders_path,  id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
     <%# カード情報の入力 %>
     <div class='credit-card-form'>
       <h1 class='info-input-haedline'>
